--- a/style.css
+++ b/style.css
@@ -57,7 +57,11 @@ img {
 
 main {
   display: grid;
+  column-gap: 40px;
   grid-template-columns: 1fr 1fr;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 50px;
 }
 
 main h1 {
@@ -66,12 +70,22 @@ main h1 {
   font-weight: 500;
 }
 
-.left {
-  /* background-color: lightsalmon; */
+.right {
+  display: grid;
+  column-gap: 30px;
+  row-gap: 30px;
+  grid-template-columns: 1fr 1fr;
 }
 
-.right {
-  /* background-color: lightseagreen; */
+.card {
+  display: flex;
+  flex-direction: column;
+}
+
+.card img {
+  height: 200px;
+  width: auto;
+  object-fit: cover;
 }
 
 .card__type {
@@ -79,22 +93,27 @@ main h1 {
   color: lightcoral;
   font-size: 14px;
   letter-spacing: 3px;
+  margin-top: 5px;
 }
 
 .card__title {
   font-weight: 500;
   font-size: 20px;
+  margin-bottom: 10px;
 }
 
 .card__description {
   font-weight: 400;
   font-size: 14px;
+  height: 100%;
 }
 
 .card__preparation {
   display: flex;
   gap: 5px;
   align-items: center;
+  justify-content: flex-end;
+  margin-top: 20px;
 }
 
 .card__preparation__icon span {
