--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ header {
   justify-content: space-between;
   padding-left: 20px;
   padding-right: 20px;
-  background-color: lightcoral;
+  border-bottom: 3px solid lightcoral;
 }
 
 .logo {
@@ -126,4 +126,25 @@ main h1 {
   font-size: 15px;
   font-weight: 400;
   color: lightcoral;
+}
+
+.left .card {
+  padding: 40px;
+  height: 80vh;
+  background-image: linear-gradient(
+      180deg,
+      rgba(0, 0, 0, 0.75),
+      rgba(0, 0, 0, 0)
+    ),
+    url("https://images.unsplash.com/photo-1560831457-87b5ec4c5e57?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1286&q=80");
+  background-size: cover;
+}
+
+.left .card__title {
+  color: white;
+}
+
+.left .card__description {
+  color: white;
+  height: auto;
 }
