--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,11 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+body {
+  max-width: 1500px;
+  margin: 0 auto;
+}
+
 header {
   height: 60px;
   display: flex;
@@ -70,11 +75,26 @@ main h1 {
   font-weight: 500;
 }
 
+main a {
+  color: black;
+  text-decoration: none;
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+
+main a:hover {
+  box-shadow: 0px 3px 10px 0px #d2d2d295;
+  transform: translateY(-5px);
+}
+
 .right {
   display: grid;
   column-gap: 30px;
   row-gap: 30px;
   grid-template-columns: 1fr 1fr;
+}
+
+.card.small {
+  display: none;
 }
 
 .card {
@@ -133,7 +153,7 @@ main h1 {
   height: 80vh;
   background-image: linear-gradient(
       180deg,
-      rgba(0, 0, 0, 0.75),
+      rgba(0, 0, 0, 0.5),
       rgba(0, 0, 0, 0)
     ),
     url("https://images.unsplash.com/photo-1560831457-87b5ec4c5e57?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1286&q=80");
@@ -147,4 +167,45 @@ main h1 {
 .left .card__description {
   color: white;
   height: auto;
+}
+
+@media screen and (max-width: 1025px) {
+  .right {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  main {
+    grid-template-columns: 1fr;
+  }
+
+  main h1 {
+    grid-column: span 1;
+  }
+
+  main .left .card {
+    height: 355px;
+  }
+
+  .card.small {
+    display: flex;
+  }
+
+  .left .card {
+    background: none;
+    padding: 0;
+    height: 0;
+  }
+  .left .card__title {
+    color: black;
+  }
+
+  .left .card__description {
+    color: black;
+  }
+
+  .card.big {
+    display: none;
+  }
 }
