--- a/styles/style.css
+++ b/styles/style.css
@@ -100,12 +100,15 @@ main a:hover {
 .card {
   display: flex;
   flex-direction: column;
+  border-radius: 5px;
 }
 
 .card img {
   height: 200px;
   width: auto;
   object-fit: cover;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 .card__type {
@@ -114,18 +117,22 @@ main a:hover {
   font-size: 14px;
   letter-spacing: 3px;
   margin-top: 5px;
+  padding-left: 10px;
 }
 
 .card__title {
   font-weight: 500;
   font-size: 20px;
   margin-bottom: 10px;
+  padding-left: 10px;
 }
 
 .card__description {
   font-weight: 400;
   font-size: 14px;
   height: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .card__preparation {
@@ -134,6 +141,7 @@ main a:hover {
   align-items: center;
   justify-content: flex-end;
   margin-top: 20px;
+  padding: 10px;
 }
 
 .card__preparation__icon span {
